[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ItemList.gd" type="Script" id=1]
[ext_resource path="res://src/Record.gd" type="Script" id=2]
[ext_resource path="res://src/ShopList.gd" type="Script" id=3]
[ext_resource path="res://assets/InventoryTheme.tres" type="Theme" id=4]
[ext_resource path="res://src/BuildingListButton.gd" type="Script" id=5]
[ext_resource path="res://src/UpgradesContainer.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -0.15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.15, 0.0 ]
}

[node name="ShopList" type="Control"]
anchor_left = -0.15
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/out = SubResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManpowerLabel" type="Label" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 21.0
text = "Manpower: "

[node name="StageLabel" type="Label" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 288.0
margin_bottom = 46.0
text = "Prod stage: "

[node name="Resource in" type="Label" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 288.0
margin_bottom = 71.0
text = "Resource in"

[node name="Resource out" type="Label" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 288.0
margin_bottom = 96.0
text = "Resource out"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 288.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 288.0
margin_bottom = 129.0
text = "Upgrades:"

[node name="UpgradesContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 133.0
margin_bottom = 133.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingListButton" type="Button" parent="VBoxContainer/UpgradesContainer"]
visible = false
margin_right = 288.0
margin_bottom = 27.0
text = "SAMPLE TEXT"
script = ExtResource( 5 )

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 137.0
margin_right = 288.0
margin_bottom = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopInventory" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 288.0
margin_bottom = 996.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VBoxContainer" parent="VBoxContainer/ShopInventory"]
margin_right = 288.0
margin_bottom = 27.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="HBoxContainer" parent="VBoxContainer/ShopInventory/ItemList"]
margin_right = 288.0
margin_bottom = 27.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="VBoxContainer/ShopInventory/ItemList/Record"]
margin_right = 142.0
margin_bottom = 27.0
size_flags_horizontal = 3
toggle_mode = true
text = "Item"
flat = true
align = 0

[node name="Label" type="Label" parent="VBoxContainer/ShopInventory/ItemList/Record"]
margin_left = 146.0
margin_top = 3.0
margin_right = 288.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 1000.0
margin_right = 288.0
margin_bottom = 1004.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 503.0
margin_right = 153.0
margin_bottom = 524.0
text = "0 Piniondz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="VBoxContainer"]
margin_top = 1008.0
margin_right = 288.0
margin_bottom = 1029.0
text = "to sell/buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 1033.0
margin_right = 288.0
margin_bottom = 1049.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 1053.0
margin_right = 288.0
margin_bottom = 1080.0
text = "BUY"

[connection signal="pressed" from="VBoxContainer/UpgradesContainer/BuildingListButton" to="VBoxContainer/UpgradesContainer/BuildingListButton" method="_on_BuildingListButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/ShopInventory/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="value_changed" from="VBoxContainer/AmountSlider" to="." method="_on_AmountSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
